--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "react-scroll": "^1.8.4",
     "react-select": "^5.2.1",
     "redux": "^4.0.5",
+    "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
     "resolve": "1.15.0",
     "resolve-url-loader": "3.1.1",
