separation containers/components

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -27,6 +27,8 @@
     "quotes": ["error", "double"],
     "react/react-in-jsx-scope": "off",
     // "react/jsx-filename-extension": [1, { "allow": "as-needed" }],
-    "react/jsx-filename-extension": "off"
+    "react/jsx-filename-extension": "off",
+    "commonjs": true,
+    "amd": true
   }
 }
