--- a/package.json
+++ b/package.json
@@ -5,6 +5,13 @@
   "homepage": "Converter currency",
   "dependencies": {
     "@babel/core": "7.9.0",
+    "@babel/helper-annotate-as-pure": "workspace:^",
+    "@babel/helper-environment-visitor": "workspace:^",
+    "@babel/helper-function-name": "workspace:^",
+    "@babel/helper-optimise-call-expression": "workspace:^",
+    "@babel/helper-plugin-utils": "workspace:^",
+    "@babel/helper-replace-supers": "workspace:^",
+    "@babel/helper-split-export-declaration": "workspace:^",
     "@popperjs/core": "^2.11.0",
     "@reduxjs/toolkit": "^1.6.2",
     "@svgr/webpack": "4.3.3",
@@ -20,6 +27,7 @@
     "@types/react-router-dom": "^5.3.2",
     "axios": "^0.19.2",
     "babel-eslint": "10.1.0",
+    "babel-helper-define-map": "^6.26.0",
     "babel-jest": "^24.9.0",
     "babel-loader": "8.1.0",
     "babel-plugin-named-asset-import": "^0.3.6",
@@ -39,6 +47,7 @@
     "file-loader": "4.3.0",
     "fs-extra": "^8.1.0",
     "gh-pages": "^3.2.3",
+    "globals": "condition:BABEL_8_BREAKING ? ^13.5.0 : ^11.1.0",
     "html-webpack-plugin": "4.0.0-beta.11",
     "identity-obj-proxy": "3.0.0",
     "jest": "24.9.0",
@@ -51,7 +60,7 @@
     "moment": "^2.29.1",
     "node-sass": "^4.14.1",
     "optimize-css-assets-webpack-plugin": "5.0.3",
-    "pnp-webpack-plugin": "1.6.4",
+    "pnp-webpack-plugin": "^1.7.0",
     "popper.js": "^1.16.1",
     "postcss-flexbugs-fixes": "4.1.0",
     "postcss-loader": "3.0.0",
@@ -182,6 +191,9 @@
     "husky": "7.0.4",
     "lint-staged": "12.3.7",
     "prettier": "^2.6.2"
-
+  },
+  "resolutions": {
+    "@types/react": "17.0.2",
+    "@types/react-dom": "17.0.2"
   }
 }
